--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(0, 0, 120);
 }
+
+#root {}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
