--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* background-image: url("./assets/background.png") !important; */
+  background-image: url("./assets/rewardity-bg.svg") !important;
+  background-size: cover !important;
 }
 
 code {
